Fixed issue where horizontal scrollbar appears when window gets too small. Added load mask.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -333,6 +333,9 @@ input.ng-touched.ng-invalid {
   .edit-player-btn-group .btn {
     padding-right: 2em; }
 
+.player-card.stats-card-override {
+  margin: 0.5em 0; }
+
 .player-stats-card {
   display: flex;
   justify-content: flex-start;
