--- a/scss/playerStats.scss
+++ b/scss/playerStats.scss
@@ -1,6 +1,10 @@
 @import "variables";
 @import "mixins";
 
+.player-card.stats-card-override {
+    margin: $standard-spacing 0;
+}
+
 .player-stats-card {
     display: flex;
     justify-content: flex-start;
